# MYOL-neer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  flight_price_fetcher.py  pyproject.toml  requirements.txt  run_flight_fetcher.sh
fast_flights/: __init__.py  core.py  local_playwright.py
k8s/: Chart.yaml  values.yaml
k8s/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  namespace.yaml  pvc.yaml  sealed-secret-s3.yaml
