[project]
name = "fast-flights"
version = "2.2"
description = "Flight price fetcher using fast-flights"
requires-python = ">=3.8"
dependencies = [
    "primp",
    "protobuf>=5.27.0",
    "selectolax",
    "pandas>=2.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
local = [
    "playwright",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fast_flights"]

